# mbiomekit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  environment.yml  pyproject.toml
src/mbiomekit/: main.py
src/mbiomekit/alpha_diversity/: plotter.py
src/mbiomekit/beta_diversity/: tsne.py
src/mbiomekit/feature_table/: barplot_by_group.py  filter.py  group_by_taxon.py  index_asv_by_taxon.py  rank.py
src/mbiomekit/group_comparison/: analysis.py  plotter.py
tests/: test_main.py
